kubernetes/hw-traefik-path.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: training
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  namespace: training
spec:
  selector:
    matchLabels:
      app: helloworld
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: karthequian/helloworld:blue
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  namespace: training
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: helloworld
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: helloworld-ingressroute
  namespace: training
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`upskillforge.com`) && PathPrefix(`/hello`)
      kind: Rule
      services:
        - name: helloworld-service
          port: 80
